--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main-card">
         
         <div class="image-section">
-            <img id="display-image" src="IMAGES/p1.png" alt="Valentine Image">
+            <img id="display-image" src="p1.png" alt="Valentine Image">
         </div>
 
         <div class="text-section">
@@ -32,4 +32,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
