--- a/message.html
+++ b/message.html
@@ -8,9 +8,9 @@
 <body id="message-page">
     <div class="message-wrapper">
         <div class="side-content">
-            <img src="IMAGES/m1.png" alt="Friend Pic 1" class="side-img">
-            <img src="IMAGES/m2.png" alt="Friend Pic 2" class="side-img">
-            <img src="IMAGES/m3.png" alt="Friend Pic 3" class="side-img">
+            <img src="m1.png" alt="Friend Pic 1" class="side-img">
+            <img src="m2.png" alt="Friend Pic 2" class="side-img">
+            <img src="m3.png" alt="Friend Pic 3" class="side-img">
         </div>
 
         <div class="main-message">
@@ -26,10 +26,11 @@
         </div>
 
         <div class="side-content">
-            <img src="IMAGES/m4.png" alt="Friend Pic 4" class="side-img">
-            <img src="IMAGES/m5.png" alt="Friend Pic 5" class="side-img">
-            <img src="IMAGES/m6.png" alt="Friend Pic 6" class="side-img">
+            <img src="m4.png" alt="Friend Pic 4" class="side-img">
+            <img src="m5.png" alt="Friend Pic 5" class="side-img">
+            <img src="m6.png" alt="Friend Pic 6" class="side-img">
         </div>
     </div>
 </body>
+
 </html>
